--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.murilo_pereira</groupId>
-    <artifactId>http-resolve</artifactId>
+    <artifactId>httpresolve</artifactId>
     <version>0.1.0</version>
-    <name>http-resolve</name>
+    <name>httpresolve</name>
     <description>Biblioteca para gerenciar rate limit e bulkhead em aplicações Spring Boot</description>
 
     <url>https://github.com/murilonerdx/httpresolve</url>
@@ -46,6 +46,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
