--- a/.gitattributes
+++ b/.gitattributes
@@ -1,53 +1,2 @@
-# -----------------
-# IntelliJ IDEA
-# -----------------
-.idea/
-*.iml
-*.iws
-out/
-.idea_modules/
-
-# Plugin-specific caches
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/shelf/
-
-# -----------------
-# Maven Wrapper
-# -----------------
-.mvn/
-mvnw
-mvnw.cmd
-
-# -----------------
-# Build output
-# -----------------
-target/
-
-# -----------------
-# Logs and OS files
-# -----------------
-*.log
-*.tmp
-*.swp
-.DS_Store
-Thumbs.db
-
-# -----------------
-# Eclipse (caso alguém use)
-# -----------------
-.project
-.classpath
-.settings/
-
-# -----------------
-# VS Code (opcional)
-# -----------------
-.vscode/
-
-# -----------------
-# Test Reports
-# -----------------
-surefire-reports/
-failsafe-reports/
+/mvnw text eol=lf
+*.cmd text eol=crlf
