--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,53 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
+# -----------------
+# IntelliJ IDEA
+# -----------------
+.idea/
 *.iml
-*.ipr
+*.iws
+out/
+.idea_modules/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# Plugin-specific caches
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/shelf/
 
-### VS Code ###
+# -----------------
+# Maven Wrapper
+# -----------------
+.mvn/
+mvnw
+mvnw.cmd
+
+# -----------------
+# Build output
+# -----------------
+target/
+
+# -----------------
+# Logs and OS files
+# -----------------
+*.log
+*.tmp
+*.swp
+.DS_Store
+Thumbs.db
+
+# -----------------
+# Eclipse (caso alguém use)
+# -----------------
+.project
+.classpath
+.settings/
+
+# -----------------
+# VS Code (opcional)
+# -----------------
 .vscode/
+
+# -----------------
+# Test Reports
+# -----------------
+surefire-reports/
+failsafe-reports/
